--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=kata
+spring.datasource.url=
+spring.datasource.driver-class.name=org.h2.Driver
+spring.datasource.username=us
+spring.datasource.password=pw
+spring.jpa.hibernate.ddl-auto=update
