--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=kata
-spring.datasource.url=
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class.name=org.h2.Driver
-spring.datasource.username=us
-spring.datasource.password=pw
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
